@@ -31,7 +31,7 @@
                     margin-top:30px;
                     margin-bottom:40px">
             <h3>
-            Help us improve this service - <a href="http://www.formspring.me/vidyalaya"> Share your ideas </a>
+            Help us improve this service - <a href="http://help.srkv.org"> Share your ideas </a>
             </h3>
         </div>
     </div>
