@@ -1,3 +1,4 @@
+Revision 133 	 2011-08-21 	 Fixing uwsgi timeout issue for long running requests 
 Revision 132 	 2011-08-20 	 After renaming, Google Apps is putting original username as nickname. We don't want it 
 Revision 131 	 2011-08-20 	 Bumping nginx proxy_read_timeout 
 Revision 130 	 2011-08-20 	 Fix for error in pre_save 
